fix: Update .gitignore to include Codacy instructions and adjust CSS styles for better layout and scrollbar handling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -209,7 +209,7 @@ p {
   }
 
   .container-custom {
-    @apply mx-auto max-w-9xl px-4 sm:px-6 lg:px-8;
+    @apply mx-auto max-w-7xl px-4 sm:px-6 lg:px-8;
   }
 
   .gradient-bg {
@@ -456,5 +456,13 @@ p {
     color: black !important;
     box-shadow: none !important;
     text-shadow: none !important;
+  }
+}
+
+.scrollbar-hide{
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  &::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
   }
 }
